# nvdaL10n

./: .gitignore  .gitmodules  .pre-commit-config.yaml  l10nConfig.yaml  l10nUtil.spec  main.py  pyproject.toml  readme.md  setup.py
.github/workflows/: automaticRelease.yaml  buildExecutable.yaml  buildExecutable.yml
config/: addonTemplate.yaml  nvda.yaml
source/: crowdinSync.py  l10nUtil.py  markdownTranslate.py  md2html.py  setup.py
