[project.scripts]
l10nutil = "l10nUtil:main"
[build-system]
requires = ["setuptools~=80.9", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nvdaL10n"
dynamic = ["version"]
description = "Translation utilities for NVDA and add-on template"
maintainers = [
	{name = "NV Access", email = "info@nvaccess.org"},
]
requires-python = ">=3.13,<3.14"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: End Users/Desktop",
	"Operating System :: Microsoft :: Windows",
	"Programming Language :: Python :: 3",
	"Topic :: Accessibility",
]
readme = "readme.md"
license = "GPL-2.0-or-later"
dependencies = [
	#Main 
	"Markdown==3.10",
	"requests==2.32.5",
	"nh3==0.3.2",
	"crowdin-api-client==1.24.1",
	"lxml==6.0.2",
	"mdx_truly_sane_lists==1.3",
	"markdown-link-attr-modifier==0.2.1",
	"mdx-gh-links==0.4",
	# Lint
	"uv==0.9.11",
	"ruff==0.14.5",
	"pre-commit==4.2.0",
	"pyright[nodejs]==1.1.407",
	# Executable
	"py2exe",
	"PyInstaller"
]
[project.urls]
Repository = "https://github.com/nvaccess/addonTemplate"
[tool.setuptools.packages.find]
where = ["source"]

[tool.ruff]
line-length = 110

builtins = [
	# translation lookup
	"_",
	# translation lookup
	"ngettext",
	# translation lookup
	"pgettext",
	# translation lookup
	"npgettext",
]

include = [
	"*.py",
]

exclude = [
	".git",
	"__pycache__",
	".venv",
	"buildVars.py",
]

[tool.ruff.format]
indent-style = "tab"
line-ending = "lf"

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint]
ignore = [
	# indentation contains tabs
	"W191",
]
logger-objects = ["logHandler.log"]

[tool.ruff.lint.per-file-ignores]
# sconscripts contains many inbuilt functions not recognised by the lint,
# so ignore F821.
"sconstruct" = ["F821"]

[tool.pyright]
venvPath = ".venv"
venv = "."
pythonPlatform = "Windows"
typeCheckingMode = "strict"

include = [
	"**/*.py",
]

exclude = [
	".git",
	"__pycache__",
	".venv",
	# When excluding concrete paths relative to a directory,
	# not matching multiple folders by name e.g. `__pycache__`,
	# paths are relative to the configuration file.
]

# Tell pyright where to load python code from
extraPaths = [
]
# General config, copied from NVDA
analyzeUnannotatedFunctions = true
deprecateTypingAliases = true

# Stricter typing
strictParameterNoneValue = true
strictListInference = true
strictDictionaryInference = true
strictSetInference = true

# Compliant rules
reportAssertAlwaysTrue = true
reportAssertTypeFailure = true
reportDuplicateImport = true
reportIncompleteStub = true
reportInconsistentOverload = true
reportInconsistentConstructor = true
reportInvalidStringEscapeSequence = true
reportInvalidStubStatement = true
reportInvalidTypeVarUse = true
reportMatchNotExhaustive = true
reportMissingModuleSource = true
reportMissingImports = true
reportNoOverloadImplementation = true
reportOptionalContextManager = true
reportOverlappingOverload = true
reportPrivateImportUsage = true
reportPropertyTypeMismatch = true
reportSelfClsParameterName = true
reportTypeCommentUsage = true
reportTypedDictNotRequiredAccess = true
reportUndefinedVariable = true
reportUnusedExpression = true
reportUnboundVariable = true
reportUnhashable = true
reportUnnecessaryCast = true
reportUnnecessaryContains = true
reportUnnecessaryTypeIgnoreComment = true
reportUntypedClassDecorator = true
reportUntypedFunctionDecorator = true
reportUnusedClass = true
reportUnusedCoroutine = true
reportUnusedExcept = true

# Should switch to true when possible
reportDeprecated = false  # 1834 errors

# Can be enabled by generating type stubs for modules via pyright CLI
reportMissingTypeStubs = false

# Bad rules
# These are roughly sorted by compliance to make it easier for devs to focus on enabling them.
# Errors were last checked Feb 2025.
# 1-50 errors
reportUnsupportedDunderAll = false  # 2 errors
reportAbstractUsage = false  # 3 errors
reportUntypedBaseClass = false  # 4 errors
reportOptionalIterable = false  # 5 errors
reportCallInDefaultInitializer = false  # 6 errors
reportInvalidTypeArguments = false  # 7 errors
reportUntypedNamedTuple = false  # 11 errors
reportRedeclaration = false  # 12 errors
reportOptionalCall = false  # 16 errors
reportConstantRedefinition = false  # 18 errors
reportWildcardImportFromLibrary = false  # 26 errors
reportIncompatibleVariableOverride = false  # 28 errors
reportInvalidTypeForm = false  # 38 errors


# 50-100 errors
reportGeneralTypeIssues = false  # 53 errors
reportOptionalOperand = false  # 59 errors
reportUnnecessaryComparison = false  # 67 errors
reportFunctionMemberAccess = false  # 80 errors
reportUnnecessaryIsInstance = false  # 88 errors
reportUnusedFunction = false  # 97 errors
reportImportCycles = false  # 99 errors
reportUnusedImport = false  # 113 errors
reportUnusedVariable = false  # 147 errors

# 100-1000 errors
reportOperatorIssue = false  # 102 errors
reportAssignmentType = false  # 103 errors
reportReturnType = false  # 104 errors
reportPossiblyUnboundVariable = false  # 126 errors
reportMissingSuperCall = false  # 159 errors
reportUninitializedInstanceVariable = false  # 179 errors
reportUnknownLambdaType = false  # 196 errors
reportMissingTypeArgument = false  # 204 errors
reportImplicitStringConcatenation = false  # 300+ errors
reportIncompatibleMethodOverride = false  # 300+ errors
reportPrivateUsage = false  # 900+ errors

# 1000+ errors
reportUnusedCallResult = false  # 1000+ errors
reportOptionalSubscript = false  # 1000+ errors, mostly failing to recognize config setter/getter
reportCallIssue = false  # 1000+ errors, mostly failing to recognize config setter/getter
reportOptionalMemberAccess = false  # 1683 errors
reportImplicitOverride = false  # 2000+ errors
reportIndexIssue = false  # 2000+ errors, mostly failing to recognize config setter/getter
reportAttributeAccessIssue = false  # 2000+ errors
reportArgumentType = false  # 2000+ errors
reportUnknownParameterType = false  # 4000+ errors
reportMissingParameterType = false  # 4000+ errors
reportUnknownVariableType = false  # 6000+ errors
reportUnknownArgumentType = false  # 6000+ errors
reportUnknownMemberType = false  # 20000+ errors
