[project.scripts]
l10nutil = "source.l10nUtil:main"
[build-system]
requires = ["setuptools~=80.9", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nvdaL10n"
dynamic = ["version"]
description = "Translation utilities for NVDA and add-on template"
maintainers = [
	{name = "NV Access", email = "info@nvaccess.org"},
]
requires-python = ">=3.13,<3.14"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: End Users/Desktop",
	"Operating System :: Microsoft :: Windows",
	"Programming Language :: Python :: 3",
	"Topic :: Accessibility",
]
readme = "readme.md"
license = "GPL-2.0-or-later"
dependencies = [
	#Main 
	"Markdown==3.10",
	"requests==2.32.5",
	"nh3==0.3.2",
	"crowdin-api-client==1.24.1",
	"lxml==6.0.2",
	"mdx_truly_sane_lists==1.3",
	"markdown-link-attr-modifier==0.2.1",
	"mdx-gh-links==0.4",
	# Lint
	"uv==0.9.11",
	"ruff==0.14.5",
	"pre-commit==4.2.0",
	"pyright[nodejs]==1.1.407",
	# Executable
	"py2exe",
	"PyInstaller"
]
[project.urls]
Repository = "https://github.com/nvaccess/addonTemplate"
[tool.setuptools.packages.find]
where = ["source"]

[tool.ruff]
line-length = 110

builtins = [
	# translation lookup
	"_",
	# translation lookup
	"ngettext",
	# translation lookup
	"pgettext",
	# translation lookup
	"npgettext",
]

include = [
	"*.py",
]

exclude = [
	".git",
	"__pycache__",
	".venv",
	"buildVars.py",
]

[tool.ruff.format]
indent-style = "tab"
line-ending = "lf"

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint]
ignore = [
	# indentation contains tabs
	"W191",
]
logger-objects = ["logHandler.log"]

[tool.ruff.lint.per-file-ignores]
# sconscripts contains many inbuilt functions not recognised by the lint,
# so ignore F821.
"sconstruct" = ["F821"]

[tool.pyright]
venvPath = ".venv"
venv = "."
pythonPlatform = "Windows"
typeCheckingMode = "strict"

include = [
	"**/*.py",
]

exclude = [
	".git",
	"__pycache__",
	".venv",
	# When excluding concrete paths relative to a directory,
	# not matching multiple folders by name e.g. `__pycache__`,
	# paths are relative to the configuration file.
]

# Tell pyright where to load python code from
extraPaths = [
]
# General config, copied from NVDA
analyzeUnannotatedFunctions = true
deprecateTypingAliases = true

# Stricter typing
strictParameterNoneValue = true
strictListInference = true
strictDictionaryInference = true
strictSetInference = true

# Compliant rules
reportAssertAlwaysTrue = true
reportAssertTypeFailure = true
reportDuplicateImport = true
reportIncompleteStub = true
reportInconsistentOverload = true
reportInconsistentConstructor = true
reportInvalidStringEscapeSequence = true
reportInvalidStubStatement = true
reportInvalidTypeVarUse = true
reportMatchNotExhaustive = true
reportMissingModuleSource = true
reportMissingImports = true
reportNoOverloadImplementation = true
reportOptionalContextManager = true
reportOverlappingOverload = true
reportPrivateImportUsage = true
reportPropertyTypeMismatch = true
reportSelfClsParameterName = true
reportTypeCommentUsage = true
reportTypedDictNotRequiredAccess = true
reportUndefinedVariable = true
reportUnusedExpression = true
reportUnboundVariable = true
reportUnhashable = true
reportUnnecessaryCast = true
reportUnnecessaryContains = true
reportUnnecessaryTypeIgnoreComment = true
reportUntypedClassDecorator = true
reportUntypedFunctionDecorator = true
reportUnusedClass = true
reportUnusedCoroutine = true
reportUnusedExcept = true
reportDeprecated = true
reportMissingTypeStubs = true
reportUnsupportedDunderAll = true
reportAbstractUsage = true
reportUntypedBaseClass = true
reportOptionalIterable = true
reportCallInDefaultInitializer = true
reportInvalidTypeArguments = true
reportUntypedNamedTuple = true
reportRedeclaration = true
reportOptionalCall = true
reportConstantRedefinition = true
reportWildcardImportFromLibrary = true
reportIncompatibleVariableOverride = true
reportInvalidTypeForm = true
reportGeneralTypeIssues = true
reportOptionalOperand = true
reportUnnecessaryComparison = true
reportFunctionMemberAccess = true
reportUnnecessaryIsInstance = true
reportUnusedFunction = true
reportImportCycles = true
reportUnusedImport = true
reportUnusedVariable = true
reportOperatorIssue = true
reportAssignmentType = true
reportReturnType = true
reportPossiblyUnboundVariable = true
reportMissingSuperCall = true
reportUninitializedInstanceVariable = true
reportUnknownLambdaType = true
reportMissingTypeArgument = true
reportImplicitStringConcatenation = true
reportIncompatibleMethodOverride = true
